--- a/prueba.ipynb
+++ b/prueba.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,32 +72,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[9.74860083e-01 2.55932154e-03 1.83062340e-03 5.64410391e-04\n",
-      "  8.98948111e-04 9.71460293e-04 4.74288001e-04 1.47523096e-02\n",
-      "  1.40037007e-04 1.66749169e-03 1.28102738e-03]]\n",
-      "[0.9748600825901733, 0.002559321537436722, 0.0018306234003551925, 0.0005644103910028399, 0.0008989481105962119, 0.0009714602934584963, 0.0004742880012612072, 0.014752309601579744, 0.0001400370067918859, 0.0016674916866736922, 0.0012810273806708058]\n",
-      "La probabilidad es 0.9748600825901733 y lo categoriza como 0\n",
-      "              precision    recall  f1-score      support\n",
-      "apoyo          0.465839  0.412088  0.437318   364.000000\n",
-      "competencia    0.404005  0.498547  0.446324   688.000000\n",
-      "construccion   0.628319  0.651376  0.639640   327.000000\n",
-      "corrupcion     0.522267  0.401869  0.454225   321.000000\n",
-      "economia       0.597403  0.544379  0.569659   169.000000\n",
-      "exterior       0.573333  0.403756  0.473829   213.000000\n",
-      "historia       0.562500  0.319527  0.407547   169.000000\n",
-      "opinion        0.436516  0.531290  0.479263   783.000000\n",
-      "salud          0.704545  0.319588  0.439716    97.000000\n",
-      "seguridad      0.561905  0.460938  0.506438   128.000000\n",
-      "accuracy       0.482663  0.482663  0.482663     0.482663\n",
-      "macro avg      0.545663  0.454336  0.485396  3259.000000\n",
-      "weighted avg   0.497339  0.482663  0.481754  3259.000000\n"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/danielhtoledo/reps/Machine_learning_project/prueba.ipynb Cell 2\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/danielhtoledo/reps/Machine_learning_project/prueba.ipynb#W1sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39msvm\u001b[39;00m \u001b[39mimport\u001b[39;00m SVC\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/danielhtoledo/reps/Machine_learning_project/prueba.ipynb#W1sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m tfidf \u001b[39m=\u001b[39m TfidfVectorizer(ngram_range\u001b[39m=\u001b[39m(\u001b[39m1\u001b[39m, \u001b[39m3\u001b[39m))\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/danielhtoledo/reps/Machine_learning_project/prueba.ipynb#W1sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m X \u001b[39m=\u001b[39m df[\u001b[39m\"\u001b[39m\u001b[39mclean\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/danielhtoledo/reps/Machine_learning_project/prueba.ipynb#W1sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m y \u001b[39m=\u001b[39m df[\u001b[39m\"\u001b[39m\u001b[39mclassification_spanish\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/danielhtoledo/reps/Machine_learning_project/prueba.ipynb#W1sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m X_train, X_test, y_train, y_test \u001b[39m=\u001b[39m train_test_split(\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/danielhtoledo/reps/Machine_learning_project/prueba.ipynb#W1sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m     X, y, train_size\u001b[39m=\u001b[39m\u001b[39m0.85\u001b[39m, random_state\u001b[39m=\u001b[39m\u001b[39m42\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/danielhtoledo/reps/Machine_learning_project/prueba.ipynb#W1sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m )\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
      ]
     }
    ],
@@ -142,32 +128,48 @@
     "def match_category(category):\n",
     "    match category:\n",
     "        case \"0\":\n",
-    "            return \"exterior\"\n",
-    "        case \"1\":\n",
-    "            return \"economia\"\n",
-    "        case \"2\":\n",
-    "            return \"opinion\"\n",
-    "        case \"3\":\n",
-    "            return \"competencia\"\n",
-    "        case \"4\":\n",
     "            return \"apoyo\"\n",
+    "        case \"1\":\n",
+    "            return \"competencia\"\n",
+    "        case \"2\":\n",
+    "            return \"construccion\"\n",
+    "        case \"3\":\n",
+    "            return \"corrupcion\"\n",
+    "        case \"4\":\n",
+    "            return \"economia\"\n",
     "        case \"5\":\n",
+    "            return \"exterior\"\n",
+    "        case \"6\":\n",
+    "            return \"historia\"\n",
+    "        case \"7\":\n",
+    "            return \"opinion\"\n",
+    "        case \"8\": \n",
+    "            return \"salud\"\n",
+    "        case \"9\":\n",
     "            return \"seguridad\"\n",
     "        case _:\n",
     "            return category\n",
     "def match_category2(category):\n",
     "    match category:\n",
     "        case 0:\n",
-    "            return \"exterior\"\n",
-    "        case 1:\n",
-    "            return \"economia\"\n",
-    "        case 2:\n",
-    "            return \"opinion\"\n",
-    "        case 3:\n",
-    "            return \"competencia\"\n",
-    "        case 4:\n",
     "            return \"apoyo\"\n",
+    "        case 1:\n",
+    "            return \"competencia\"\n",
+    "        case 2:\n",
+    "            return \"construccion\"\n",
+    "        case 3:\n",
+    "            return \"corrupcion\"\n",
+    "        case 4:\n",
+    "            return \"economia\"\n",
     "        case 5:\n",
+    "            return \"exterior\"\n",
+    "        case 6:\n",
+    "            return \"historia\"\n",
+    "        case 7:\n",
+    "            return \"opinion\"\n",
+    "        case 8: \n",
+    "            return \"salud\"\n",
+    "        case 9:\n",
     "            return \"seguridad\"\n",
     "\n",
     "\n",
@@ -176,7 +178,7 @@
     "    print(proba)\n",
     "    maxx = max(proba)\n",
     "    index = proba.index(maxx)\n",
-    "    return f\"La probabilidad es {maxx} y lo categoriza como {index}\"\n",
+    "    return f\"La probabilidad es {maxx} y lo categoriza como {match_category2(index)}\"\n",
     "\n",
     "\n",
     "def clasification_rep():\n",
@@ -201,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
