test and add tsne

--- a/prueba.ipynb
+++ b/prueba.ipynb
@@ -243,9 +243,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Texto</th>\n",
+       "      <th>Clasificacion</th>\n",
+       "      <th>new_classification</th>\n",
+       "      <th>classification_spanish</th>\n",
+       "      <th>cla_num</th>\n",
+       "      <th>Texto_limpio</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Buenos días y feliz año. Deseamos que nos vay...</td>\n",
+       "      <td>saludos</td>\n",
+       "      <td>Support</td>\n",
+       "      <td>apoyo</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>buen día y feliz año desear que yo ir bien a...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Vamos a iniciar la semana como lo hacemos siem...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Health</td>\n",
+       "      <td>salud</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>ir a iniciar el semana como él hacer siempre e...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>También vamos a informar este primer día hábil...</td>\n",
+       "      <td>apoyo</td>\n",
+       "      <td>Support</td>\n",
+       "      <td>apoyo</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>también ir a informar este primero día hábil d...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Y ahora se va a informar porque se está optand...</td>\n",
+       "      <td>apoyo</td>\n",
+       "      <td>Support</td>\n",
+       "      <td>apoyo</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>y ahora él ir a informar porque él estar optar...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>En esta etapa se combinan los bancos particula...</td>\n",
+       "      <td>apoyo</td>\n",
+       "      <td>Support</td>\n",
+       "      <td>apoyo</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>en este etapa él combinar el banco particular ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               Texto Clasificacion  \\\n",
+       "0   Buenos días y feliz año. Deseamos que nos vay...       saludos   \n",
+       "1  Vamos a iniciar la semana como lo hacemos siem...           NaN   \n",
+       "2  También vamos a informar este primer día hábil...         apoyo   \n",
+       "3  Y ahora se va a informar porque se está optand...         apoyo   \n",
+       "4  En esta etapa se combinan los bancos particula...         apoyo   \n",
+       "\n",
+       "  new_classification classification_spanish  cla_num  \\\n",
+       "0            Support                  apoyo      0.0   \n",
+       "1             Health                  salud      8.0   \n",
+       "2            Support                  apoyo      0.0   \n",
+       "3            Support                  apoyo      0.0   \n",
+       "4            Support                  apoyo      0.0   \n",
+       "\n",
+       "                                        Texto_limpio  \n",
+       "0    buen día y feliz año desear que yo ir bien a...  \n",
+       "1  ir a iniciar el semana como él hacer siempre e...  \n",
+       "2  también ir a informar este primero día hábil d...  \n",
+       "3  y ahora él ir a informar porque él estar optar...  \n",
+       "4  en este etapa él combinar el banco particular ...  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import nltk\n",
     "from nltk.corpus import stopwords\n",
@@ -309,6 +416,54 @@
     "\n",
     "df = return_dataframe()\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Texto                         0\n",
+       "Clasificacion             21249\n",
+       "new_classification            0\n",
+       "classification_spanish        0\n",
+       "cla_num                       8\n",
+       "Texto_limpio                  0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Tool\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.manifold import TSNE\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "import pandas as pd\n",
+    "import plotly.express as px\n",
+    "\n",
+    "from Models2 import text_pro\n",
+    "\n",
+    "\n",
+    "# apply the fn to the dataframe \n",
+    "\n",
+    "tsne_result_df  =  pd.read_csv(\"TSNe/tsne_results2.csv\")\n",
+    "def plot_tsne():\n",
+    "  fig = px.scatter(data_frame = tsne_result_df,\n",
+    "                  x = tsne_result_df['tsne_1'],\n",
+    "                  y = tsne_result_df['tsne_2'],\n",
+    "                  color = tsne_result_df['label'],\n",
+    "                  template = 'plotly_dark',\n",
+    "                  hover_data = ['text'])\n",
+    "  return fig\n",
+    "plot_tsne().show()"
    ]
   }
  ],
