Droped column in clean amlo csv
There was a column of an index in the csv, just dropped it

--- a/Models/cosine.ipynb
+++ b/Models/cosine.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "id": "dec5bc48",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-21T03:06:55.255783Z",
-     "start_time": "2023-11-21T03:06:55.215339Z"
+     "end_time": "2023-11-24T20:04:02.911994Z",
+     "start_time": "2023-11-24T20:04:02.862027Z"
     }
    },
    "outputs": [],
@@ -79,12 +79,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "id": "572cbb1d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-21T03:06:57.974256Z",
-     "start_time": "2023-11-21T03:06:57.960256Z"
+     "end_time": "2023-11-24T20:04:05.830212Z",
+     "start_time": "2023-11-24T20:04:05.816195Z"
     }
    },
    "outputs": [
@@ -109,7 +109,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>Texto</th>\n",
        "      <th>Clasificacion</th>\n",
        "      <th>clean</th>\n",
@@ -119,7 +118,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>También vamos a informar este primer día hábil...</td>\n",
        "      <td>apoyo</td>\n",
        "      <td>también ir a informar este primero día hábil d...</td>\n",
@@ -127,7 +125,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>Y ahora se va a informar porque se está optand...</td>\n",
        "      <td>apoyo</td>\n",
        "      <td>y ahora él ir a informar porque él estar optar...</td>\n",
@@ -135,7 +132,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>En esta etapa se combinan los bancos particula...</td>\n",
        "      <td>apoyo</td>\n",
        "      <td>en este etapa él combinar el banco particular ...</td>\n",
@@ -143,7 +139,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>También Ariadna Montiel, que es la secretaria ...</td>\n",
        "      <td>apoyo</td>\n",
        "      <td>también ariadna montiel que ser el secretaria ...</td>\n",
@@ -151,7 +146,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>Pero tenerlas terminadas no significa tenerlas...</td>\n",
        "      <td>apoyo</td>\n",
        "      <td>pero tener él terminado no significar tener él...</td>\n",
@@ -163,11 +157,9 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>449</th>\n",
-       "      <td>449</td>\n",
        "      <td>Eso es lo que le puedo decir, con todo respeto...</td>\n",
        "      <td>exterior</td>\n",
        "      <td>ese ser él que él poder decir con todo respeto...</td>\n",
@@ -175,7 +167,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>450</th>\n",
-       "      <td>450</td>\n",
        "      <td>Se va a llegar a concretar porque es que los ...</td>\n",
        "      <td>exterior</td>\n",
        "      <td>él ir a llegar a concretar porque ser que el...</td>\n",
@@ -183,7 +174,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>451</th>\n",
-       "      <td>451</td>\n",
        "      <td>Entonces, tenemos que hablar mucho con nuestro...</td>\n",
        "      <td>seguridad</td>\n",
        "      <td>entonces tener que hablar mucho con nuestro pa...</td>\n",
@@ -191,7 +181,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>452</th>\n",
-       "      <td>452</td>\n",
        "      <td>Es que ya lo están haciendo. Y a lo mejor el…...</td>\n",
        "      <td>exterior</td>\n",
        "      <td>ser que ya él estar hacer y a él mejor el bu...</td>\n",
@@ -199,7 +188,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>453</th>\n",
-       "      <td>453</td>\n",
        "      <td>¿Y qué? ¿No importa el pueblo? ¿No un bloqueo ...</td>\n",
        "      <td>seguridad</td>\n",
        "      <td>y qué no importar el pueblo no uno bloqueo él ...</td>\n",
@@ -207,35 +195,35 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>454 rows × 5 columns</p>\n",
+       "<p>454 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Unnamed: 0                                              Texto  \\\n",
-       "0             0  También vamos a informar este primer día hábil...   \n",
-       "1             1  Y ahora se va a informar porque se está optand...   \n",
-       "2             2  En esta etapa se combinan los bancos particula...   \n",
-       "3             3  También Ariadna Montiel, que es la secretaria ...   \n",
-       "4             4  Pero tenerlas terminadas no significa tenerlas...   \n",
-       "..          ...                                                ...   \n",
-       "449         449  Eso es lo que le puedo decir, con todo respeto...   \n",
-       "450         450   Se va a llegar a concretar porque es que los ...   \n",
-       "451         451  Entonces, tenemos que hablar mucho con nuestro...   \n",
-       "452         452   Es que ya lo están haciendo. Y a lo mejor el…...   \n",
-       "453         453  ¿Y qué? ¿No importa el pueblo? ¿No un bloqueo ...   \n",
+       "                                                 Texto Clasificacion  \\\n",
+       "0    También vamos a informar este primer día hábil...         apoyo   \n",
+       "1    Y ahora se va a informar porque se está optand...         apoyo   \n",
+       "2    En esta etapa se combinan los bancos particula...         apoyo   \n",
+       "3    También Ariadna Montiel, que es la secretaria ...         apoyo   \n",
+       "4    Pero tenerlas terminadas no significa tenerlas...         apoyo   \n",
+       "..                                                 ...           ...   \n",
+       "449  Eso es lo que le puedo decir, con todo respeto...      exterior   \n",
+       "450   Se va a llegar a concretar porque es que los ...      exterior   \n",
+       "451  Entonces, tenemos que hablar mucho con nuestro...     seguridad   \n",
+       "452   Es que ya lo están haciendo. Y a lo mejor el…...      exterior   \n",
+       "453  ¿Y qué? ¿No importa el pueblo? ¿No un bloqueo ...     seguridad   \n",
        "\n",
-       "    Clasificacion                                              clean  \\\n",
-       "0           apoyo  también ir a informar este primero día hábil d...   \n",
-       "1           apoyo  y ahora él ir a informar porque él estar optar...   \n",
-       "2           apoyo  en este etapa él combinar el banco particular ...   \n",
-       "3           apoyo  también ariadna montiel que ser el secretaria ...   \n",
-       "4           apoyo  pero tener él terminado no significar tener él...   \n",
-       "..            ...                                                ...   \n",
-       "449      exterior  ese ser él que él poder decir con todo respeto...   \n",
-       "450      exterior    él ir a llegar a concretar porque ser que el...   \n",
-       "451     seguridad  entonces tener que hablar mucho con nuestro pa...   \n",
-       "452      exterior    ser que ya él estar hacer y a él mejor el bu...   \n",
-       "453     seguridad  y qué no importar el pueblo no uno bloqueo él ...   \n",
+       "                                                 clean  \\\n",
+       "0    también ir a informar este primero día hábil d...   \n",
+       "1    y ahora él ir a informar porque él estar optar...   \n",
+       "2    en este etapa él combinar el banco particular ...   \n",
+       "3    también ariadna montiel que ser el secretaria ...   \n",
+       "4    pero tener él terminado no significar tener él...   \n",
+       "..                                                 ...   \n",
+       "449  ese ser él que él poder decir con todo respeto...   \n",
+       "450    él ir a llegar a concretar porque ser que el...   \n",
+       "451  entonces tener que hablar mucho con nuestro pa...   \n",
+       "452    ser que ya él estar hacer y a él mejor el bu...   \n",
+       "453  y qué no importar el pueblo no uno bloqueo él ...   \n",
        "\n",
        "                                                vector  \n",
        "0    [ 1.41899014e+00  2.89622617e+00 -8.29722404e-...  \n",
@@ -250,10 +238,10 @@
        "452  [ 1.79775321e+00  2.57321405e+00 -1.54663992e+...  \n",
        "453  [ 0.76080745  3.5405314  -2.2143698  -0.491702...  \n",
        "\n",
-       "[454 rows x 5 columns]"
+       "[454 rows x 4 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,23 +524,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "7e48f22d",
+   "execution_count": 11,
+   "id": "6fb13085",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-21T03:05:00.354517Z",
-     "start_time": "2023-11-21T03:04:59.891761Z"
+     "end_time": "2023-11-24T20:04:15.838486Z",
+     "start_time": "2023-11-24T20:04:15.833487Z"
     }
    },
    "outputs": [],
    "source": [
-    "#df.to_csv('../clean_amlo.csv', index=False)#"
+    "#df = df.drop('Unnamed: 0', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7e48f22d",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-24T20:04:15.946607Z",
+     "start_time": "2023-11-24T20:04:15.933345Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#df.to_csv('../clean_amlo.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "6c445ee4",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-24T20:04:00.497612Z",
+     "start_time": "2023-11-24T20:04:00.488615Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 454 entries, 0 to 453\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column         Non-Null Count  Dtype \n",
+      "---  ------         --------------  ----- \n",
+      " 0   Texto          454 non-null    object\n",
+      " 1   Clasificacion  454 non-null    object\n",
+      " 2   clean          454 non-null    object\n",
+      " 3   vector         454 non-null    object\n",
+      "dtypes: object(4)\n",
+      "memory usage: 14.3+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c445ee4",
+   "id": "cea2d2ed",
    "metadata": {},
    "outputs": [],
    "source": []
